# patronus

./: .gitignore  CLAUDE.md  Cargo.toml  PDR_ISSUE_A_ANALYSIS.md  PDR_PONO_SMT_COMPARISON.md  PDR_REVIEW.md
.github/workflows/: release.yml  test.yml
.github/workflows/setup-bitwuzla/: action.yml
.github/workflows/setup-cvc5/: action.yml
inputs/chiseltest/: AddResetAssumptionPass_should_ignore_the_reset_if_it_is_preset_annotated_FailAfterPresetModule.btor  AddResetAssumptionPass_should_not_add_any_reset_assumptions_with_ResetOption0_FailAfterModule.btor  AddResetAssumptionPass_should_reset_for_the_right_amount_of_cycles_ResetCountCheckModule.btor  Demo1_should_fail_a_bounded_check_17_cycles_after_reset_SvaDemo1.btor  Demo2A_should_fail_a_bounded_check_15_cycles_after_reset_SvaDemo2.btor  Demo2B_should_fail_a_bounded_check_15_cycles_after_reset_SvaDemo2B.btor  Demo2C_should_fail_a_bounded_check_15_cycles_after_reset_SvaDemo2C.btor  Demo3_should_fail_a_bounded_check_16_cycles_after_reset_SvaDemo3.btor  GCD_should_pass_DecoupledGcdSpec.btor  KeppMax1_should_have_a_monotonically_increasing_output_KeepMax.btor  KeppMax8_should_have_a_monotonically_increasing_output_KeepMax.btor  MagicPacketTracker_should_find_bug_in_QueueV2_QueueFormalTest.btor  MagicPacketTracker_should_find_bug_in_QueueV6_w_pipe__false_QueueFormalTest.btor  MagicPacketTracker_should_find_bug_in_QueueV6_w_pipe__true_QueueFormalTest.btor  MagicPacketTracker_should_notice_if_the_counter_overflows_PacketTrackerCounterOverflowTest.btor  MagicPacketTracker_should_verify_QueueV0_QueueFormalTest.btor  MagicPacketTracker_should_verify_QueueV1_QueueFormalTest.btor  MagicPacketTracker_should_verify_QueueV3_QueueFormalTest.btor  MagicPacketTracker_should_verify_QueueV4_QueueFormalTest.btor  MagicPacketTracker_should_verify_QueueV5_QueueFormalTest.btor  MagicPacketTracker_should_verify_fix_for_QueueV6_w_pipe__false_QueueFormalTest.btor  MagicPacketTracker_should_verify_fix_for_QueueV6_w_pipe__true_QueueFormalTest.btor  MagicPacketTracker_should_verify_some_versions_of_the_Queue_from_the_Chisel_standard_library_ChiselQueueTest.btor  MagicPacketTracker_should_verify_the_BubbleFifo_FifoTestWrapper.btor  Quiz13_should_pass_when_x_is_1_wide_Quiz13.btor  Quiz13_should_pass_when_x_is_8_wide_Quiz13.btor  Quiz15_should_fail_when_using_ReadFirst_Quiz15.btor  Quiz15_should_fail_when_using_Undefined_Quiz15.btor  Quiz15_should_pass_when_using_WriteFirst_Quiz15.btor  Quiz1_should_fail_without_assumption_Quiz1.btor  Quiz1_should_pass_with_assumption_Quiz1.btor  Quiz2_should_fail_without_counter_reset_value_Quiz2.btor  Quiz2_should_pass_with_counter_reset_value_Quiz2.btor  Quiz4_should_fail_when_using_a_RegNext_to_delay_the_signal_Quiz4.btor  Quiz4_should_pass_when_using_the_Chisel_past_function_Quiz4.btor  Quiz4_should_pass_when_using_the_guarded_assumption__Chisel_past_function_Quiz4.btor  Quiz7_should_fail_when_using_a_RegNext_to_delay_the_signal_Quiz7.btor  Quiz7_should_pass_when_using_the_Chisel_past_function_Quiz7.btor  Registered_readfirst_memory_should_not_return_written_data_after_one_cycle_ReadFirstMemoryReturnsDataAfterOneCycle.btor  Registered_readfirst_memory_should_return_written_data_after_two_cycles_ReadFirstMemoryReturnsDataAfterTwoCycles.btor  (+34 more)
inputs/coward/: add_three.2_bit.smt2  add_three.4_bit.smt2  blend.4_bit.smt2  dot_product.4_bit.smt2  fma.4_bit.smt2  fma_share.4_bit.smt2  fmaa.4_bit.smt2
inputs/unittest/: aman_goel.btor  aman_goel_4bit.btor  dangling.btor2
inputs/verilog_tests/: Delay.btor  Overflow.btor  Swap.btor  Swap.sv  compile.sh
patronus/: Cargo.toml
patronus-dse/src/: engine.rs  eval.rs  lib.rs  value_summary.rs
patronus-dse/tests/: engine.rs
patronus-egraphs/src/: arithmetic.rs  dot.rs  rewrites.rs
patronus-firrtl/: Cargo.toml
patronus-firrtl/src/: firrtl.lalrpop  ir.rs  lib.rs  parser.rs
patronus-sca/: Cargo.toml
patronus-sca/src/: backward.rs  backwards.rs  forward.rs  lib.rs  rewrite.rs
patronus/src/: auto.rs  expr.rs  lib.rs  mc.rs  smt.rs  system.rs
patronus/src/btor2/: parse.rs  serialize.rs
patronus/src/expr/: analysis.rs  context.rs  eval.rs  meta.rs  nodes.rs  parse.rs  serialize.rs  simplify.rs  transform.rs  traversal.rs
patronus/src/mc/: bmc.rs  encoding.rs  ind.rs  pdr.rs  smt.rs  types.rs  utils.rs
patronus/src/sim/: interface.rs  interpreter.rs  wave.rs
patronus/src/smt/: parser.rs  serialize.rs  solver.rs
patronus/src/system/: analysis.rs  constraints.rs  serialize.rs  transform.rs  transition_system.rs
patronus/tests/: btor2_test.rs  pdr.rs  simplify.rs
patronus/tests/patronus_out/: aman_goel_4bit.smt2  delay.smt  delay.smt2  overflow_fail.smt  simple_fail.smt2  swap.smt  trivial_fail.smt  trivial_fail.smt2  trivial_input_fail.smt  trivial_input_fail.smt2
patronus/tests/pono_out/: aman_goel_4bit.smt2  delay.smt2  simple_fail.smt2  swap.smt2  trivial_fail.smt2  trivial_input_fail.smt2
patronus/tests/snapshots/: btor2_test__complex_parse_neg_nodes.snap  btor2_test__non_bool_parse_neg_nodes.snap  btor2_test__parse_large_line.snap  btor2_test__parse_neg_nodes.snap  btor2_test__parse_sdram_and_simplify_expressions.snap  btor2_test__parse_sdram_and_simplify_expressions.snap.new  btor2_test__parse_sha3_keccak_and_check_that_all_anonymous_inputs_are_there.snap.new  btor2_test__serialize_count2.snap  btor2_test__serialize_pass_through.snap.new  btor2_test__serialize_quiz1.snap
patronus/tests/verilog_tests/: Delay.sv  Overflow.btor  Overflow.sv
python/: Cargo.toml  pyproject.toml
python/patronus_btor/: Cargo.toml  pyproject.toml  setup.py
python/patronus_btor/src/: lib.rs
python/patronus_btor/tests/: test_quiz1.py
python/src/: ctx.rs  expr.rs  lib.rs  mc.rs  sim.rs  smt.rs
python/tests/: test_all.py  test_btor2.py  test_expr.py  test_lib.py  test_mc.py  test_quiz1.py  test_sim.py  test_smt.py
src/egraphs/: arithmetic.rs  mod.rs
tools/egraphs-cond-synth/: Cargo.toml
tools/egraphs-cond-synth/src/: features.rs  main.rs  samples.rs
tools/eq/: Cargo.toml
tools/mc/: Cargo.toml
tools/mc/src/: main.rs
tools/simplify/: Cargo.toml
(+6 files in other folders)
