[workspace]
resolver = "2"
members = ["patronus", "patronus-egraphs", "patronus-dse", "tools/mc", "tools/egraphs-cond-synth", "tools/sim", "tools/simplify", "tools/view", "python"]

[workspace.package]
edition = "2024"
authors = ["Kevin Laeufer <laeufer@berkeley.edu>"]
repository = "https://github.com/cucapra/patronus"
readme = "Readme.md"
license = "BSD-3-Clause"
rust-version = "1.88.0"
# used by main patronus library and python bindings
version = "0.38.1"

[workspace.dependencies]
rustc-hash = "2.*"
baa = { version = "0.19.0", features = ["rand1"] }
egg = "0.11.0"
regex = "1.12.4"
boolean_expression = "0.4.4"
clap =  { version = "4.*", features = ["derive"] }
patronus = {path = "patronus"}
thiserror = "2.0.18"
rand = { version = "0.10", features = [] }

# speed up execution of tests using insta
[profile.dev.package]
insta.opt-level = 3

# include debug information for profiling
[profile.release]
debug = true

# for samply: https://github.com/mstange/samply/?tab=readme-ov-file#turn-on-debug-info-for-full-stacks
[profile.profiling]
inherits = "release"
debug = true
