[package]
name = "patronus-firrtl"
version = "0.1.0"
description = "firrtl frontend"
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
patronus = { path = "../patronus" }
baa.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
cranelift-entity = "0.121.2"
chumsky = { version = "0.11.2", features = ["regex"] }
logos = "0.15.1"

