[package]
name = "patronus"
version.workspace = true
description = "Hardware bug-finding toolkit."
homepage = "https://kevinlaeufer.com"
keywords = ["RTL", "btor", "model-checking", "SMT", "bit-vector"]
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
indexmap = "2.14.0"
codespan-reporting = "0.13.1"
lazy_static = "1.5.0"
smallvec = { version = "1.*", features = ["union"] }
rand.workspace = true
boolean_expression.workspace = true
regex.workspace = true
baa.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
fst-writer = "0.3.1"

[dev-dependencies]
insta = { version = "1.*", features = ["yaml"] }

