[package]
name = "patronus_btor"
version = "0.1.0"
edition = "2024"
description = "PyO3 bindings for Patronus BTOR parsing"
license = "BSD-3-Clause"

[lib]
name = "patronus_btor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
patronus = { path = "../../patronus" }
baa = "0.17.1"
