[package]
name = "cond-synth"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
patronus.workspace = true
patronus-egraphs = { path = "../../patronus-egraphs"}
egg.workspace = true
clap.workspace = true
rustc-hash.workspace = true
boolean_expression.workspace = true
baa.workspace = true
indicatif = "0.18.4"
rayon = "1.12.0"
bitvec = "1.1.1"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
rand.workspace = true
